--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,7 @@
 * {
+  overflow-x: hidden;
+  overflow-y: hidden;
+
   margin: 0;
 }
 
@@ -8,37 +11,71 @@
   background-color: #333;
 }
 
+.carousel {
+  height: 100%;
+}
+
 .button {
+  position: relative;
+  bottom: 0;
+
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 
+  height: 100%;
+  margin-top: -150px;
   padding-top: 10px;
 
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
 }
 
 #but,
 #prev,
 #next {
-  width: 200px;
-  height: 50px;
+  font-family: 'Roboto Slab';
+  font-size: 20px;
 
+  width: 300px;
+  height: 100px;
+
+  cursor: pointer;
+
+  opacity: 0.7;
+  color: white;
   border: 0;
+  border-radius: 5px;
+  background-color: black;
   -webkit-box-shadow: 5px 5px 5px black;
   box-shadow: 5px 5px 5px black;
+}
+
+#but:hover,
+#prev:hover,
+#next:hover {
+  -webkit-transition: background-color 0.25s;
+  -o-transition: background-color 0.25s;
+  transition: background-color 0.25s;
+
+  background-color: rgba(0, 0, 0, 0.521);
 }
 
 .slides {
   position: relative;
 
-  height: 700px;
-  margin: 0;
-  padding: 0;
+  height: 80%;
+  margin: 5px;
 
   list-style-type: none;
+}
+
+.slide,
+.slides {
+  border-radius: 15px;
+  -webkit-box-shadow: 0 10px 15px black;
+  box-shadow: 0 10px 15px black;
 }
 
 .slide {
@@ -55,6 +92,8 @@
   transition: opacity 0.25s;
 
   opacity: 0;
+  background-position: center;
+  background-size: cover;
 }
 
 .active {
@@ -63,33 +102,22 @@
   opacity: 1;
 }
 
-.slide {
-  font-size: 40px;
-
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  padding: 40px;
-
-  color: white;
-  background: #333;
-}
-
 .slide:nth-of-type(1) {
-  background: red;
+  background-image: url('/assets/img/1.jpg');
 }
 
 .slide:nth-of-type(2) {
-  background: orange;
+  background-image: url('/assets/img/2.jpg');
 }
 
 .slide:nth-of-type(3) {
-  background: green;
+  background-image: url('/assets/img/3.jpg');
 }
 
 .slide:nth-of-type(4) {
-  background: blue;
+  background-image: url('/assets/img/4.jpg');
 }
 
 .slide:nth-of-type(5) {
-  background: purple;
+  background-image: url('/assets/img/5.jpg');
 }
