--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,11 +6,16 @@
 
 .container {
   background-color: #333;
+  display: flex;
   height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .carousel {
-  height: 100%;
+  display: grid;
+  justify-items: center;
+  height: 80%;
 }
 
 .button {
@@ -18,9 +23,10 @@
   padding-top: 10px;
   display: flex;
   justify-content: space-evenly;
-  bottom: 0;
-  margin-top: -150px;
-  height: 100%;
+  margin-bottom: 30px;
+  padding-bottom: 10px;
+  align-items: flex-end;
+  flex: auto;
 }
 
 #but,
@@ -39,23 +45,42 @@
   border-radius: 5px;
 }
 
+.indicators {
+  display: grid;
+  grid-template-areas: 'a a a a a';
+  justify-content: center;
+  gap: 5px;
+  height: 100%;
+  z-index: 5;
+  align-items: end;
+}
+
+.indicator {
+  border-radius: 25%;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(255, 255, 255);
+  opacity: 0.2;
+  transition: opacity 0.25s;
+}
+
 #but:hover,
 #prev:hover,
-#next:hover {
+#next:hover,
+.indicator:hover {
   background-color: rgba(0, 0, 0, 0.521);
-
   transition: background-color 0.25s;
 }
 
 .slides {
   margin: 5px;
-  position: relative;
-  height: 80%;
+  position: absolute;
+  width: 99vw;
+  height: 100vh;
   list-style-type: none;
 }
 
-.slide,
-.slides {
+.slide {
   border-radius: 15px;
   box-shadow: 0px 10px 15px black;
 }
@@ -67,7 +92,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 80%;
   opacity: 0;
   z-index: 1;
   transition: opacity 0.25s;
