--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,9 @@
   margin: 0;
   overflow-y: hidden;
   overflow-x: hidden;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 
 .container {
